  * summarize sets of changes - don't reproduce every git log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)

------------------------------------------------------------------------------
??/??/??

  * 0.11.1

API Changes

Enhancements

Changes

Fixes


09/07/15  tyler.je.reddy, richardjgowers, alejob, orbeckst, dotsdl,
        manuel.nuno.melo, cyanezstange, khuston, ivirshup, kain88-de,
        gormanstock

  * 0.11.0

  This release brings large changes to many parts of the API and might
  break many existing scripts. For a full guide on the API changes,
  please see:

  https://github.com/MDAnalysis/mdanalysis/wiki/MDAnalysis-0.11-unifying-release-user-guide

  Migrating old scripts has been made easier with the introduction of
  the ten2eleven tool which is part of the package.
  Details on how to use this are available at:

  https://github.com/MDAnalysis/mdanalysis/wiki/Migrating-MDAnalysis-code-with-ten2eleven.py

  API Changes

  * Changed AtomGroup counting methods to properties with different
    names: numberOfAtoms() to n_atoms, numberOfResidues() to
    n_residues, numberOfSegments() --> n_segments (Issue #376)
  * Changed trajectory reader numframes to n_frames (Issue #376)
  * Changed Timestep.numatoms to n_atoms (Issue #376)
  * Deprecated the use of the 'fullgroup' selection keyword (Issue #268)
  * Changed atom.number attribute to atom.index (Issue #372)
  * Changed many AtomGroup methods to properties.  These are: indices,
    masses, charges, names, types, radii, resids, resnames, resnums,
    segids (Issue #372)
  * Timestep can now only init using an integer argument (which
    represents the number of atoms) (Issue #250)
  * Added from_timestep and from_coordinates construction methods
    to base.Timestep (Issue #250)