@@ -174,11 +174,9 @@ class TestXYZReader(TestCase, Ref2r9r):
         frames = [ts.frame for ts in trj_iter]
         assert_equal(frames, np.arange(self.universe.trajectory.n_frames))
 
-    def test_slice_raises_TypeError(self):
-        def trj_iter():
-            return list(self.universe.trajectory[::2])
-
-        assert_raises(TypeError, trj_iter)
+    def test_slice(self):
+        frames = [ts.frame for ts in self.universe.trajectory[::2]]
+        assert_equal(frames, np.arange(len(self.universe.trajectory))[::2])
 
         # for whenever full slicing is implemented ...
         #frames = [ts.frame-1 for ts in trj_iter()]
